sfdxsrc/triggerFramework/objects/Trigger_Handler__mdt/fields/Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>Execution_Order__c</fullName>
    <inlineHelpText>The order in which you wanted to execute the trigger handler class.</inlineHelpText>
    <label>Execution Order</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>