sfdxsrc/triggerFramework/objects/Trigger_Handler__mdt/fields/HandlerClassName__c.field-meta.xml
<CustomField>
    <fullName>HandlerClassName__c</fullName>
    <label>Handler Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>