sfdxsrc/triggerFramework/objects/Trigger_Handler__mdt/fields/Is_After_Delete__c.field-meta.xml
<CustomField>
    <fullName>Is_After_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If True Enables the Trigger for After Delete Event Context.</inlineHelpText>
    <label>Is After Delete</label>
    <type>Checkbox</type>
</CustomField>