sfdxsrc/triggerFramework/objects/Trigger_Handler__mdt/fields/Is_After_Insert__c.field-meta.xml
<CustomField>
    <fullName>Is_After_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If True Enables the Trigger for After Insert Event Context.</inlineHelpText>
    <label>Is After Insert</label>
    <type>Checkbox</type>
</CustomField>