sfdxsrc/triggerFramework/objects/Trigger_Handler__mdt/fields/Is_After_Undelete__c.field-meta.xml
<CustomField>
    <fullName>Is_After_Undelete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If True Enables the Trigger for After UnDelete Event Context.</inlineHelpText>
    <label>Is After Undelete</label>
    <type>Checkbox</type>
</CustomField>