sfdxsrc/triggerFramework/objects/Trigger_Handler__mdt/fields/Is_After_Update__c.field-meta.xml
<CustomField>
    <fullName>Is_After_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If True Enables the Trigger for After Update Event Context.</inlineHelpText>
    <label>Is After Update</label>
    <type>Checkbox</type>
</CustomField>