sfdxsrc/triggerFramework/objects/Trigger_Handler__mdt/fields/Is_Before_Delete__c.field-meta.xml
<CustomField>
    <fullName>Is_Before_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If True Enables the Trigger for Before Delete Event Context.</inlineHelpText>
    <label>Is Before Delete</label>
    <type>Checkbox</type>
</CustomField>