sfdxsrc/triggerFramework/objects/Trigger_Handler__mdt/fields/Is_Before_Insert__c.field-meta.xml
<CustomField>
    <fullName>Is_Before_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If True Enables the Trigger for Before Event Context.</inlineHelpText>
    <label>Is Before Insert</label>
    <type>Checkbox</type>
</CustomField>