sfdxsrc/triggerFramework/objects/Trigger_Handler__mdt/fields/Is_Before_Update__c.field-meta.xml
<CustomField>
    <fullName>Is_Before_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If True Enables the Trigger for Before Update Event Context.</inlineHelpText>
    <label>Is Before Update</label>
    <type>Checkbox</type>
</CustomField>