sfdxsrc/triggerFramework/objects/Trigger_Handler__mdt/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the Trigger Handler is active or not</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>