sfdxsrc/triggerFramework/objects/Trigger_Handler__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <inlineHelpText>Select the Object in which the trigger is on.</inlineHelpText>
    <label>Object Name</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Trigger_Handlers</relationshipLabel>
    <relationshipName>Trigger_Handlers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>